fix(slideshow): fix button slideshow, the buttons are no longer visible when the slide changes

--- a/src/styles/components/_slideshow.scss
+++ b/src/styles/components/_slideshow.scss
@@ -6,6 +6,10 @@
   border-radius: $border-radius-l;
   @include flex-center(center);
   overflow: hidden;
+  &__button {
+    background: white;
+    border: none;
+  }
   &__img {
     position: absolute;
     top: 0;
@@ -48,6 +52,7 @@
     height: 15.9rem;
     margin-top: 1.68rem;
     margin-bottom: 0.9rem;
+
     &__arrow {
       width: 1.25rem;
       height: 0.75rem;
